--- a/demo2symfony/templates/base.html.twig
+++ b/demo2symfony/templates/base.html.twig
@@ -3,26 +3,40 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}SymBlog{% endblock %}</title>
-        <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+        <link rel="stylesheet" href="https://bootswatch.com/3/journal/bootstrap.min.css">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="{{path('home')}}">SymBlog</a>
+       <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{{path('home')}}">SymBlog</a>
+    </div>
       
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav mr-auto">
+          
+    <div id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
                     <li class="nav-item ">
                         <a class="nav-link"  href="{{path('blog')}}">Articles</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{path('blog_create')}}">Créer un article</a>
                     </li>
-
+                    {% if not app.user %}
+                        <li class="nav-item">
+                            <a href="{{path('security_login')}}" class="nav-link">Connexion</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a href="{{path('security_logout')}}" class="nav-link">Déconnexion</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
