--- a/demo2symfony/templates/blog/create.html.twig
+++ b/demo2symfony/templates/blog/create.html.twig
@@ -1,12 +1,23 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.html.twig' %} 
+
+{% form_theme formArticle 'bootstrap_4_layout.html.twig' %}
+
 {% block body %}
 
-    <h1>Création d'un article </h1>
-    <form action="" method="post" style="display: flex; align-items: baseline; ">
-        <input type="text" name="title" placeholder="Contenu de l'article">
-        <textarea name="content" placeholder="Contenu de l'article"></textarea>
-        <input type="text" name="image" placeholder="Image de l'article">
-        <button type="submit">Enregistrer</button>
-    </form>
- 
+    <h1>Création d'un article</h1>
+    {{ form_start(formArticle) }} 
+
+        {{ form_row(formArticle.title,{'label':'Titre','attr':{'placeholder':'Titre de l\'article'}} ) }}
+        {{ form_row(formArticle.category,{'label':'Catégorie'} ) }}
+        {{ form_row(formArticle.content,{'label':'Contenu','attr':{'placeholder':'Contenu de l\'article'}} ) }}
+        {{ form_row(formArticle.image,{'label':'Image','attr':{'placeholder':'URL de l\'article'}} ) }}
+
+        <button type="submit" class="btn btn-success">
+            {% if editMode%}
+                Modifier l'article
+            {% else %}
+                Ajouter l'article 
+            {% endif %}
+        </button>
+    {{ form_end(formArticle) }} 
 {% endblock %}
