--- a/demo2symfony/templates/blog/show.html.twig
+++ b/demo2symfony/templates/blog/show.html.twig
@@ -1,11 +1,38 @@
-{% extends 'base.html.twig' %}
-{% block body %}
+{% extends 'base.html.twig' %} {% block body %}
 <article>
     <h2>{{article.title}}</h2>
-    <div class="metadata">Ecrit le {{article.createdAt |date('d/m/Y')}} à {{article.createdAt | date('H:i')}} dans la catégorie Politique</div>
+    <div class="metadata">Ecrit le {{article.createdAt |date('d/m/Y')}} à {{article.createdAt | date('H:i')}} dans la catégorie {{article.category.title}}</div>
     <div class="content">
         <img src="{{article.image}}" alt="">
-        {{article.content |raw}}
+        <p>{{article.content |raw}}</p>
     </div>
-</article>   
+</article>
+<section id="commentaires">
+    <h3>{{article.comments | length}} commentaires : </h3>
+    {% for comment in article.comments %}
+    <div class="comment">
+        <div class="row">
+            <div class="col-3">
+                {{comment.author}} (<small>{{comment.createdAt | date('d/m/Y à H:i')}}</small>)
+            </div><br>
+            <div class="col">
+            {{comment.content | raw}}
+            </div>
+        </div>
+    </div>
+    {% endfor %} 
+    <br>
+    {% if app.user %}
+        {{ form_start(commentForm) }} 
+        {{ form_row(commentForm.author,{'label':'Auteur.e','attr':{'placeholder':'Votre nom'}} ) }}
+        {{ form_row(commentForm.content,{'label':'Commentaire','attr':{'placeholder':'Votre commentaire'}} ) }}
+
+        <button type="submit" class="btn btn-success">Commenter </button>
+        {{ form_end(commentForm) }} 
+    {% else %}
+        <h3> Merci de vous connecter pour pouvoir laisser un commentaire</h3>
+        <a href="{{path('security_login')}}" class="btn btn-primary"> Connexion</a>
+    {% endif %}
+    <br>
+</section>
 {% endblock %}
